# practicas_middleware

./: .gitignore  LICENSE  README.md
ros/: readme_ros.md
ros/paquetes/example_pkg/: CMakeLists.txt  package.xml
ros/paquetes/example_pkg/src/: example_node.cpp
ros/paquetes/ros_tutorials/roscpp_tutorials/: CMakeLists.txt
ros/paquetes/ros_tutorials/roscpp_tutorials/listener/: .listener.cpp.swn  .listener.cpp.swo  listener.cpp
ros/paquetes/ros_tutorials/roscpp_tutorials/listener_async_spin/: listener_async_spin.cpp
ros/paquetes/ros_tutorials/roscpp_tutorials/listener_threaded_spin/: listener_threaded_spin.cpp
ros/paquetes/ros_tutorials/roscpp_tutorials/spin/: CMakeLists.txt  spin.cpp
ros/paquetes/ros_tutorials/roscpp_tutorials/spinOne/: CMakeLists.txt  spinOne.cpp
ros/paquetes/ros_tutorials/roscpp_tutorials/talker/: talker.cpp
ros/paquetes/ros_tutorials/rospy_tutorials/: CMakeLists.txt
ros/paquetes/ros_tutorials/rospy_tutorials/001_talker_listener/: listener.py  talker  talker.py
ros/paquetes/ros_tutorials/rospy_tutorials/asyncspinner/: asyncspinner.launch  asyncspinner.py
ros2/: readme_ros2.md
ros2/paquetes/ej1/custom_msgs_pkg/: package.xml  setup.cfg  setup.py
ros2/paquetes/ej1/custom_msgs_pkg/custom_msgs_pkg/: publisher.py  subscriber.py
ros2/paquetes/ej1/qos_demo_pkg/: package.xml  setup.cfg  setup.py
ros2/paquetes/ej1/qos_demo_pkg/qos_demo_pkg/: pub_sub_qos.py
ros2/paquetes/ej1/tails_threads/tails_threads_cpp/: CMakeLists.txt  package.xml
ros2/paquetes/ej1/tails_threads/tails_threads_py/: package.xml  setup.cfg  setup.py
ros2/paquetes/ej3/double_talker_listener/: package.xml  setup.cfg  setup.py
ros2/paquetes/ej3/pub_sub_node/: package.xml  setup.cfg  setup.py
ros2/paquetes/ej3/pub_sub_node/pub_sub_node/: pub_sub_node.py
ros2/paquetes/ej4/count_vowels/: package.xml  setup.cfg  setup.py
ros2/paquetes/ej4/custom_interfaces/: CMakeLists.txt  package.xml
ros2/paquetes/example_pkg/: CMakeLists.txt  package.xml
ros2/paquetes/example_pkg/src/: example_node.cpp
yarp/: readme_yarp.md
yarp/yarp_exercises/: CMakeLists.txt  buffered_port.cpp  custom_auto_connect.cpp  custom_buffered_port.cpp  custom_receiver.cpp  custom_sender.cpp  multihilo.cpp  multithread.cpp  receiver.cpp  sender.cpp
(+16 files in other folders)
